[gd_scene load_steps=7 format=3 uid="uid://qmfhx80ymt3g"]

[ext_resource type="Script" uid="uid://d04k6lbfactvy" path="res://Scenes/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://d1hlm1sem5dva" path="res://Assets/Player/player_meele/(TSP-UC) â€“ Vulture Division.png" id="3_6t5aa"]
[ext_resource type="PackedScene" uid="uid://dln6vj78fto53" path="res://Scenes/Guns/melee_weapon.tscn" id="3_vgqql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8j60k"]
size = Vector2(22, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fo5ed"]
size = Vector2(22, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvnsp"]
bg_color = Color(0.32477, 0.705123, 1.92523e-07, 1)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_mask = 60
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_8j60k")

[node name="melee_weapon" parent="." instance=ExtResource("3_vgqql")]
position = Vector2(94.6569, -13.3684)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_6t5aa")
offset = Vector2(12, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_fo5ed")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerCamera" type="Camera2D" parent="."]
scale = Vector2(1.99629, 1.76656)
zoom = Vector2(1.5, 1.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 13.0
offset_top = 15.0
offset_right = 374.0
offset_bottom = 74.0
theme_override_styles/fill = SubResource("StyleBoxFlat_cvnsp")
value = 44.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 14.0
offset_top = 83.0
offset_right = 243.0
offset_bottom = 123.0
pivot_offset = Vector2(116, 20)

[node name="WeaponLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "WEAPON NAME"

[node name="AmmoLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Ammo: ?? / ??"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="WeaponInventoryPopup" type="Node" parent="."]

[node name="InventoryPanel" type="Panel" parent="WeaponInventoryPopup"]
offset_right = 40.0
offset_bottom = 40.0

[node name="WeaponSlot" type="Node" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
